[tool.poetry]
name = "svg2tikz"
version = "3.0.0"
description = "Tools for converting SVG graphics to TikZ/PGF code"
authors = ["ldevillez <louis.devillez@gmail.com>", " Kjell Magne Fauske <kjellmf@gmail.com>"]
maintainers = ["ldevillez <louis.devillez@gmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"
inkex = "^1.2.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-click = "^4.4.0"
sphinx-copybutton = "^0.5.1"
sphinxext-opengraph = "^0.7.5"
furo = "^2023.9.10"
sphinx-argparse = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"


[[tool.poetry.source]]
name = "inkex_gitlab"
url = "https://gitlab.com/api/v4/projects/40060814/packages/pypi/simple"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
svg2tikz = "svg2tikz.tikz_export:main_cmdline"
